<resources>
    <string name="app_name">Route Survey</string>
    <string name="title_activity_login">Login</string>
    <string name="route">Route</string>
    <string name="survey">Survey</string>
    <string name="user_name">user name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="courses">courses</string>
    <string name="error_login">Error</string>
    <string name="empty_user_name">please Fill in user name</string>
    <string name="ok">ok</string>
    <string name="loading">Loading</string>
    <string name="please_wait">please wait...</string>
</resources>
