<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="route.com.routesurvey.Login"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/route"
    android:gravity="center"
    android:textColor="@color/colorPrimary"
    android:textSize="48sp" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/survey"
      android:gravity="center"
      android:textSize="32sp"
      android:textColor="@color/green"
      android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:id="@+id/user_name"
            android:inputType="textPersonName"
            android:hint="@string/user_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

</LinearLayout>
